# Chronest

./: .gitignore  CODE_OF_CONDUCT.EN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.EN.md  CONTRIBUTING.md  NOTICE  README.EN.md  README.md  SECURITY.EN.md  SECURITY.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question_discussion.yml
docs/: architecture.EN.md  architecture.md
i18n/: settings.en.json  settings.zh-CN.json
plugins/official-git/: manifest.json
scripts/: check-all.mjs  check-architecture.mjs  check-rust-module-layout.mjs
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: default.toml
src-tauri/sql/: 0001_init.sql
src-tauri/src/: main.rs  state.rs
src-tauri/src/app/: bootstrap.rs  mod.rs
src-tauri/src/dashboard/: commands.rs  mod.rs  models.rs  service.rs
src-tauri/src/plugins/: mod.rs  models.rs  repository.rs
src-tauri/src/runtime/: clock.rs  errors.rs  mod.rs  paths.rs  storage_config.rs
src-tauri/src/settings/: mod.rs  models.rs
src-tauri/src/tasks/: mod.rs  models.rs  repository.rs
src/app/: app-shell.tsx  bootstrap.tsx  routes.tsx
src/components/: calendar-grid.tsx  plugin-panel.tsx  task-list.tsx
src/hooks/: index.ts  use-desktop-window.ts
src/lib/: index.ts
src/locales/: settings.en.json  settings.zh-CN.json
src/screens/: calendar-screen.tsx
src/services/: dashboard-api.ts  index.ts
(+31 files in other folders)
