[package]
name = "chronest"
version = "0.1.0"
description = "Chronest local-first calendar automation desktop app"
authors = ["Chronest Contributors"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.82"

[package.metadata.tauri-winres]
OriginalFilename = "Chronest.exe"
FileDescription = "Chronest local-first calendar automation desktop app"
ProductName = "Chronest"
LegalCopyright = "Copyright (c) 2026 Chronest Contributors"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["clock", "serde"] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
